[tool.poetry]
name = "ebook-js"
version = "0.1.0"
description = "A port from calibre's ebook-convert to Javascript"
authors = ["Diógenes Oliveira <diogenes1oliveira@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
