[tool.poetry]
name = "ebook-js"
version = "0.1.0"
description = "A port from calibre's ebook-convert to Javascript"
authors = ["Diógenes Oliveira <diogenes1oliveira@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/diogenes1oliveira/ebook-js"
keywords = ["ebook", "conversion", "calibre"]
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: End Users/Desktop',
  'Topic :: Utilities',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "calibre" },
    { include = "polyglot" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/diogenes1oliveira/ebook-js/issues"

[tool.poetry.scripts]
ebook-js-convert = "calibre.ebooks.conversion.cli:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
